syntax = "proto3";
package FrontEnd;

option go_package = "./FrontEnd";

service FrontEndService{
    rpc AddBid (BidRequest) returns (BidResponse);
    rpc GetResult (ResultRequest) returns (ResultResponse);
}

message BidRequest{
    int32 amount = 1;
    int32 clientId = 2;
}
message ResultRequest{
    int32 amount = 1;
    int32 clientId = 2;
}
message BidResponse{
    string msg = 1;
    int32 auctionTime = 2;
}
message ResultResponse{
    int32 amount = 1;
    string msg = 2;
    int32 auctionTime = 3;
}
